# quicktrust

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  docker-compose.yml  featuresimplemented.md  opensource.md  package.json  pendingfeatures.md  pnpm-lock.yaml  requirements.md  samplesql.sql  test.md  userflow.md
backend/: Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0000_phase1_base_tables.py  0001_phase2_tables.py  0002_phase3_tables.py  0003_phase4_tables.py  (+3 more)
backend/app/: config.py  main.py
backend/seeds/: control_templates.py  evidence_templates.py  extended_control_templates.py  extended_evidence_templates.py  gdpr_framework.py  hipaa_framework.py  iso27001_framework.py  nist_csf_framework.py  pci_dss_framework.py  policy_templates.py  run_seeds.py  seed_ccpa.py  seed_cis.py  seed_cmmc.py  seed_csa_star.py  seed_fedramp.py  seed_iso27701.py  seed_nist_800_171.py  seed_nist_800_53.py  seed_sox.py  soc2_framework.py
backend/tests/: conftest.py  test_access_reviews.py  test_agent_runs.py  test_audit_logs.py  test_auditor_marketplace.py  test_audits.py  test_control_templates.py  test_controls.py  test_embeddings.py  test_evidence.py  test_frameworks.py  test_gap_analysis.py  test_health.py  test_incidents.py  test_integrations.py  test_monitoring.py  test_notifications.py  test_onboarding.py  test_organizations.py  test_policies.py  test_prowler.py  test_questionnaires.py  test_rbac.py  test_reports.py  test_risks.py  test_tenants.py  test_training.py  test_trust_center.py  test_vendors.py
(+264 files in other folders)
